--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Header section -->
-    <header>
+    <header class="bg-color">
         <h1>Hello to everyone!</h1>
         <!-- Nav bar -->
         <nav class="menu">
@@ -19,9 +19,8 @@
             </ul>
         </nav>
     </header>
-    <hr>
     <!-- Sign in or log in page -->
-    <div id="requestSection">
+    <div id="requestSection" class="bg-color">
         <h3>Are you new?</h3>
         <button class="no-border"><a href="other/register.html">Sign Up!</a></button><br>
         <span><strong>or</strong></span><br>
@@ -41,22 +40,21 @@
             <p>Forgot the <a href="#">Password</a>?</p>
         </div>
     </div>
-    <hr>
     <!-- First section -->
-    <section class="card-container">
+    <section class="card-container bg-color">
             <img class="rounded-image" src="https://cdn.pixabay.com/photo/2015/06/23/23/12/hand-819279_960_720.jpg" alt="Shaking hands">
         <h2 class="title-section">Example</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime debitis ab quis, vero quae blanditiis reiciendis sint culpa distinctio optio aliquid cupiditate similique voluptate? Tenetur, sunt? Fugiat suscipit maxime illum?</p>
     </section>
     <!-- Second section -->
-    <section class="card-container">
+    <section class="card-container bg-color">
             <img class="rounded-image" src="https://cdn.pixabay.com/photo/2017/11/26/15/16/smiley-2979107_960_720.jpg" alt="Some Emoji">
         <h2 class="title-section">Example</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime debitis ab quis, vero quae blanditiis reiciendis sint culpa distinctio optio aliquid cupiditate similique voluptate? Tenetur, sunt? Fugiat suscipit maxime illum?</p>
     </section>
     <hr>
     <!-- Feedback section -->
-    <section id="feedback">
+    <section id="feedback" class="bg-color">
         <form action="other/thanks.html" method="GET">
             <label>
                 <strong>Leave a vote</strong> <br>
@@ -75,7 +73,7 @@
     </section>
     <hr>
     <!-- Footer section -->
-    <footer>
+    <footer class="bg-color">
         <span><strong>&copy;Giuseppe</strong></span>
     </footer>
 </body>
