--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <!-- Sign in or log in page -->
-    <div id="requestSection" class="bg-color">
+    <div id="requestSection" class="bg-color rounded-border">
         <h3>Are you new?</h3>
         <button class="no-border"><a href="other/register.html">Sign Up!</a></button><br>
         <span><strong>or</strong></span><br>
@@ -41,20 +41,19 @@
         </div>
     </div>
     <!-- First section -->
-    <section class="card-container bg-color">
+    <section class="card-container bg-color rounded-border">
             <img class="rounded-image" src="https://cdn.pixabay.com/photo/2015/06/23/23/12/hand-819279_960_720.jpg" alt="Shaking hands">
         <h2 class="title-section">Example</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime debitis ab quis, vero quae blanditiis reiciendis sint culpa distinctio optio aliquid cupiditate similique voluptate? Tenetur, sunt? Fugiat suscipit maxime illum?</p>
     </section>
     <!-- Second section -->
-    <section class="card-container bg-color">
+    <section class="card-container bg-color rounded-border">
             <img class="rounded-image" src="https://cdn.pixabay.com/photo/2017/11/26/15/16/smiley-2979107_960_720.jpg" alt="Some Emoji">
         <h2 class="title-section">Example</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime debitis ab quis, vero quae blanditiis reiciendis sint culpa distinctio optio aliquid cupiditate similique voluptate? Tenetur, sunt? Fugiat suscipit maxime illum?</p>
     </section>
-    <hr>
     <!-- Feedback section -->
-    <section id="feedback" class="bg-color">
+    <section id="feedback" class="bg-color rounded-border">
         <form action="other/thanks.html" method="GET">
             <label>
                 <strong>Leave a vote</strong> <br>
@@ -71,7 +70,6 @@
             <input type="submit" class="no-border" value="Submit">
         </form>
     </section>
-    <hr>
     <!-- Footer section -->
     <footer class="bg-color">
         <span><strong>&copy;Giuseppe</strong></span>
