--- a/index.html
+++ b/index.html
@@ -1,78 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My first Website</title>
-    <link rel="stylesheet" tyope="text/css" href="style/reset.css">
+    <link rel="stylesheet" type="text/css" href="style/reset.css">
+    <!-- Bootstrap style -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- My style -->
     <link rel="stylesheet" type="text/css" href="style/style.css">
-    <link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
-    <!-- Header section -->
-    <header class="bg-color">
-        <h1>Hello to everyone!</h1>
-        <!-- Nav bar -->
-        <nav class="menu">
-            <ul>
-               <li><a href="index.html">Home</a></li> 
-               <li><a href="other/about.html">About</a></li>
-            </ul>
+    <header class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand" href="#">My first Website</a>
         </nav>
-    </header>
-    <!-- Sign in or log in page -->
-    <div id="requestSection" class="bg-color rounded-border">
-        <h3>Are you new?</h3>
-        <button class="no-border"><a href="other/register.html">Sign Up!</a></button><br>
-        <span><strong>or</strong></span><br>
-        <!-- Log in section -->
-        <div id="logIn">
-            <form action="index.html" method="POST">
-                <label for="username">
-                    <span>Username:</span>
-                    <input type="text" name="username" id="username">
-                </label><br>
-                <label for="password">
-                        <span>Password:</span>
-                        <input type="password" name="password" id="password">
-                    </label><br>
-                    <input type="submit" class="no-border" value="Log In">
-            </form>
-            <p>Forgot the <a href="#">Password</a>?</p>
-        </div>
-    </div>
-    <!-- First section -->
-    <section class="card-container bg-color rounded-border">
-            <img class="rounded-image" src="https://cdn.pixabay.com/photo/2015/06/23/23/12/hand-819279_960_720.jpg" alt="Shaking hands">
-        <h2 class="title-section">Example</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime debitis ab quis, vero quae blanditiis reiciendis sint culpa distinctio optio aliquid cupiditate similique voluptate? Tenetur, sunt? Fugiat suscipit maxime illum?</p>
-    </section>
-    <!-- Second section -->
-    <section class="card-container bg-color rounded-border">
-            <img class="rounded-image" src="https://cdn.pixabay.com/photo/2017/11/26/15/16/smiley-2979107_960_720.jpg" alt="Some Emoji">
-        <h2 class="title-section">Example</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime debitis ab quis, vero quae blanditiis reiciendis sint culpa distinctio optio aliquid cupiditate similique voluptate? Tenetur, sunt? Fugiat suscipit maxime illum?</p>
-    </section>
-    <!-- Feedback section -->
-    <section id="feedback" class="bg-color rounded-border">
-        <form action="other/thanks.html" method="GET">
-            <label>
-                <strong>Leave a vote</strong> <br>
-                <span>1</span><input type="radio" name="vote" value="one" checked>
-                <span>2</span><input type="radio" name="vote" value="two">
-                <span>3</span><input type="radio" name="vote" value="three">
-                <span>4</span><input type="radio" name="vote" value="four">
-                <span>5</span><input type="radio" name="vote" value="five">
-            </label>
-            <label> <br>
-                <strong>Leave a comment (Required)</strong> <br>
-                <textarea name="comment" id="comment" cols="30" rows="10" required></textarea>
-            </label> <br>
-            <input type="submit" class="no-border" value="Submit">
-        </form>
-    </section>
-    <!-- Footer section -->
-    <footer class="bg-color">
-        <span><strong>&copy;Giuseppe</strong></span>
-    </footer>
+      </header>
+
+<!-- Bootsrap Script -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
